style.css
body {
    text-align: center;
    background: linear-gradient(-45deg, #1D2F6F, #8390fa, #fac748, #f9e9ec, #f88dad);
    background-size: 700% 700%;
    animation: bg 20s ease infinite;
    font-family: 'Oxygen', sans-serif;
}

img {
    max-width: 100%;
    max-height: 100%;
}

iframe[src*=youtube] {
    display: block;
    margin: 0 auto;
    max-width: 100%;
    padding-bottom: 10px;
}

#mainDiv {
    border-radius: 20px;
    display: inline-block;
    padding: 2%;
    margin-bottom: 5%;
    width: 90%;
    background-color: rgb(215, 217, 250);
}

#projectPageDiv {
    border-radius: 20px;
    display: inline-block;
    padding: 2%;
    margin-bottom: 5%;
    width: 90%;
    background-color: rgb(215, 217, 250);
}

#projectContent {
    text-align: left;
    line-height: 2.5em;
}

#footer {
    border-radius: 20px;
    display: inline-block;
    padding: 2%;
    margin-bottom: 5%;
    background-color: rgb(215, 217, 250);
}

#links {
    overflow: hidden;
    display: grid;
    grid-auto-flow: column;
    grid-column-gap: 10px;
}

#mainDiv h1 {
    font-size: 3em;
    color: #2b78f5;
}

#mainDiv h2 {
    font-size: 1.65em;
    color: rgb(32, 32, 38);
}

#mainDiv a {
    color: #2b78f5;
}

#mainDiv a:visited {
    color: #2b78f5;
}

#projectsContainer a {
    text-decoration: none;
    color: rgb(32, 32, 38);
}

#projectsContainer a:visited {
    text-decoration: none;
    color: rgb(32, 32, 38);
}

#projectContent h3 {
    font-size: 1.35em;
}

#projectContent ul,
ol,
p {
    font-size: 1.25em;
}

.project h1 {
    color: blue;
    text-decoration: underline;
}

.mainLink {
    font-size: 2.75em;
    color: #2b78f5;
}

.project {
    border-radius: 20px;
    display: inline-block;
    padding: 2%;
    margin-bottom: 3%;
    margin-right: 10px;
    background-color: rgb(215, 217, 250);
    width: 40%;
    height: 12.5em;
    background-color: azure;
}

@media only screen and (max-width: 801px) {
    .project {
        border-radius: 20px;
        display: inline-block;
        padding: 2%;
        margin-bottom: 3%;
        margin-right: 10px;
        background-color: rgb(215, 217, 250);
        width: 90%;
        height: auto;
        background-color: azure;
    }
    #mainDiv h1 {
        font-size: 2.25em;
        color: #2b78f5;
    }
    #links a {
        font-size: 6vw;
    }
    #mainDiv h2 {
        font-size: 1.3em;
        color: rgb(32, 32, 38);
    }
}

@media only screen and (max-width: 1332px) {
    .project {
        border-radius: 20px;
        display: inline-block;
        padding: 2%;
        margin-bottom: 3%;
        margin-right: 10px;
        background-color: rgb(215, 217, 250);
        width: 70%;
        height: auto;
        background-color: azure;
    }
}

@keyframes bg {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 80% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

